# punching_bag

./: .gitignore  README.md  pyproject.toml
aredesu/: test_are.md
deep_research/: 人のバイタルデータを取得するウェアラブルデバイス調査.docx
development/lib_trial/: README.md  pyproject.toml
development/lib_trial/examples/: trial.py
development/lib_trial/src/lib_trial/: __init__.py
development/lib_trial/src/lib_trial/module_a/: __init__.py  class_a.py
development/lib_trial/src/lib_trial/module_b/: __init__.py  class_b.py  util.py
development/lib_trial/tests/: test_lib.py
development/load_iteration/: pandas_loader.py
development/my_type/: iq_type.py
development/python_logging/: main.py  moduleA.py  moduleB.py  try_file_log.py
koredesu/: kore_test.md
mathematics/basic/: fft_correlation.py  incremental_svd.py  modified_bessel_function.py  online_mean_variance.py  quick_sort.py  sin_cos_inner_product.py
mathematics/doppler_science/: advanced_perturbation_analysis.py  advanced_separation.py  doppler_simulation.py  heart_rate_estimation.py  heart_respiration_simulation.py  iq_and_filter.py  perturbed_heartbeat.py  predict_d_to_iq.py  simplified_doppler.py
mathematics/ml/: pcr_pls.py  shap_trial.py
mathematics/probability/: allan_variance.py  box_plot_bootstrap.py  confidence_interval.py  confidence_prob.py  contiunuous_count.py  effect_size_and_confidence.py  hample_identifier.py  noise_histogram.py  prob_x1_over_x2.py  view_table.py
mathematics/signal_processing/: bessel_function.py  block_zero_phase.py  cepstrum.py  coherence.py  dct_and_dft.py  doppler_math.md  doppler_math_stft.md  fft_amp_with_window.py  fif_decomposition.py  filter_check.py  gauss_fft.py  good_filter.py  music_method.py  oneside_frequency_iir.py  predict_fft_phase.py  sample_entropy.py  sideband_filter.py  signal_eliminator.py  simple_envelope.py  simple_fft.py  simple_iq_wave.py  simple_iq_wave2.py  simple_iq_wave3.py  simple_iq_wave4.py  simple_iq_wave5.py  singular_spectrum_analysis.py  watch_frequency_response.py  wavelet_transform.py  welch_method.py  zero_phase_check.py
playground/: power_and_absolute_frequency.py  trial_pep723.py
playground/bump_detection/: beat_like_signal.py  iq_bump_dual_branch.py  iq_bump_filter.py  log_filter_theory.md  log_filter_trial.py
visualization/: ridge_plot.py
(+125 files in other folders)
