[project]
name = "punching-bag"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kotaro", email = "11015194+kotaroPurple@users.noreply.github.com" }
]
dependencies = [
    "numpy>=2.0.1",
    "matplotlib>=3.9.2",
    "scipy>=1.14.0",
    "pyqt6>=6.7.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/punching_bag"]
