[project]
name = "punching-bag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "neurokit2>=0.2.10",
    "numpy>=2.1.2",
    "pyqt6>=6.7.1",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "streamlit>=1.39.0",
]
