[project]
name = "punching-bag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emd-signal>=1.6.4",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "llvmlite>=0.43.0",
    "matplotlib>=3.9.2",
    "neurokit2>=0.2.10",
    "numba>=0.60.0",
    "numpy==2.0.2",
    "pyqt6>=6.7.1",
    "pywavelets>=1.7.0",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "shap>=0.46.0",
    "streamlit-aggrid>=1.0.5",
    "streamlit>=1.39.0",
    "plotly>=5.24.1",
    "dearpygui>=2.0.0",
    "tkeasygui>=1.0.21",
    "pytk>=0.0.2.1",
    "celery>=5.5.0",
]
