[project]
name = "lib-trial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ko", email = "ko@to.me" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "lib-trial",
    "pytest>=8.4.1",
]

[tool.uv.sources]
lib-trial = { workspace = true }


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
